--- a/frontend/style.css
+++ b/frontend/style.css
@@ -46,6 +46,15 @@ div.login{
     margin:auto;
 }
 
+div.create{
+    background-color:white;
+    width:250px;
+    height:400px;
+    border:30px solid mediumseagreen;
+    padding:50px;
+    margin:auto;
+}
+
 a{
     color:black
 }
