--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -51,12 +51,14 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0px 16px;
+    padding: 7px 16px;
     border-radius: 50px;
+    transition: 0.15s;
 }
 
 .nav-text a:hover {
     background-color: #567fa3;
+    font-size: 24px;
 }
 
 .nav-menu-items {
