--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -1,17 +1,18 @@
 .navbar {
-    background-color: #679ac6;
+    background-color: #99afbf;
     height: 80px;
     width: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+    filter: drop-shadow(0px 2px 2px rgba(0,0,0,0.2));
 }
 
 .nav-title {
     font-weight: 600;
     text-decoration: none;
-    color: azure;
+    color: white;
     font-size: 3rem;
     flex: 1;
     text-align: center;
@@ -20,7 +21,7 @@
 .menu-bars {
     font-size: 2.5rem;
     background-color: none;
-    color: azure;
+    color: white;
     flex: 1;
     text-align: left;
     padding-top: 0.8rem;
@@ -29,7 +30,7 @@
 .log-out-button {
     font-size: 2.5rem;
     background-color: none;
-    color: azure;
+    color: white;
     flex: 1;
     text-align: right;
     padding-top: 0.8rem;
@@ -40,7 +41,7 @@
 }
 
 .nav-menu {
-    background-color: #679ac6;
+    background-color: #99afbf;
     width: 300px;
     height: 100vh;
     display: flex;
@@ -69,7 +70,7 @@
 
 .nav-text a {
     text-decoration: none;
-    color: azure;
+    color: white;
     font-size: 25px;
     width: 95%;
     height: 100%;
@@ -81,7 +82,7 @@
 }
 
 .nav-text a:hover {
-    background-color: #567fa3;
+    background-color: #8ca0af;
     font-size: 24px;
 }
 
