--- a/frontend/src/components/Tasks.css
+++ b/frontend/src/components/Tasks.css
@@ -3,6 +3,8 @@
     height: 480px;
     background-color: #99afbf;
     border-radius: 20px;
+    margin:auto;
+    margin-top:150px;
 }
 
 .title {
