--- a/frontend/src/components/Tasks/Tasks.css
+++ b/frontend/src/components/Tasks/Tasks.css
@@ -67,7 +67,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 .task-list-view {
     margin-left: 0.75rem; 
     margin-right: 0.75rem; 
-    max-height: 60vh;  
+    max-height: 55vh;  
     overflow: scroll;  
     display: flex;   
     flex-direction: column;
@@ -164,4 +164,31 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 .spacer {
     flex: 1;
     text-align: right;
+}
+
+.options-item {
+    display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  border: 1px solid #e5e7eb; /* gray-200 */
+  border-radius: 0.375rem; /* rounded-md */
+  padding: 0.75rem; /* p-3 */
+  user-select: none;
+  cursor: pointer;
+}
+
+.options-box {
+    padding: 1rem;
+    width: 12rem;
+    position: fixed;
+    top: 3rem;
+    left: 3.5rem;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+    display: flex;
+    border-radius: 0.5rem;
+    flex-direction: column;
+    gap: 0.75rem;
+    background-color: white;
+    font-weight: 300;
+    font-size: 13px;
 }
