--- a/frontend/src/components/Tasks/Tasks.css
+++ b/frontend/src/components/Tasks/Tasks.css
@@ -4,7 +4,7 @@
     background-color: #99afbf;
     border-radius: 20px;
     margin:auto;
-    margin-top:40px;
+    margin-top:110px;
     height: 80vh; 
     filter: drop-shadow(0px 0px 3px rgba(0,0,0,0.3));
     height: 100%;
@@ -178,8 +178,8 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 }
 
 .options-box {
-    padding: 1rem;
-    width: 12rem;
+    padding: 0.5rem;
+    width: 5rem;
     position: fixed;
     top: 3rem;
     left: 3.5rem;
@@ -187,8 +187,60 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     display: flex;
     border-radius: 0.5rem;
     flex-direction: column;
-    gap: 0.75rem;
     background-color: white;
     font-weight: 300;
     font-size: 13px;
 }
+
+.options-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 0.1rem;
+}
+
+.edit-bar {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    color: #74848e;
+    padding: 0px 5px 0px 5px;
+}
+
+.edit-bar:hover {
+    background-color: #f6f4f4;
+    border-radius: 10px;
+}
+
+.delete-bar {
+    display: flex;
+    color: #74848e;
+    font-size: 1.2rem;
+    align-items: center;
+}
+
+.delete-bar:hover {
+    background-color: #f6f4f4;
+    border-radius: 10px;
+}
+
+.options-menu button {
+    width: 100%;
+    color: #74848e;
+    padding: 10px;
+    background: none;
+    border: none;
+    text-align: left;
+    cursor: pointer;
+  }
+
+.delete-icon {
+    margin-top: 5px;
+    margin-left: 4px;
+}
+
+.edit-icon {
+    margin-top: 5px;
+
+}
+  
+
