--- a/frontend/src/components/Tasks/Tasks.css
+++ b/frontend/src/components/Tasks/Tasks.css
@@ -175,12 +175,12 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   padding: 0.75rem; /* p-3 */
   user-select: none;
   cursor: pointer;
+  z-index: 10;
 }
 
 .options-box {
     padding: 0.5rem;
     width: 5rem;
-    position: fixed;
     top: 3rem;
     left: 3.5rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
@@ -190,12 +190,14 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     background-color: white;
     font-weight: 300;
     font-size: 13px;
+    z-index: 10;
 }
 
 .options-menu {
     display: flex;
     flex-direction: column;
     gap: 0.1rem;
+    z-index: 10;
 }
 
 .edit-bar {
@@ -204,11 +206,13 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     font-size: 1.2rem;
     color: #74848e;
     padding: 0px 5px 0px 5px;
+    z-index: 10;
 }
 
 .edit-bar:hover {
     background-color: #f6f4f4;
     border-radius: 10px;
+    z-index: 10;
 }
 
 .delete-bar {
@@ -216,11 +220,13 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     color: #74848e;
     font-size: 1.2rem;
     align-items: center;
+    z-index: 10;
 }
 
 .delete-bar:hover {
     background-color: #f6f4f4;
     border-radius: 10px;
+    z-index: 10;
 }
 
 .options-menu button {
@@ -231,6 +237,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     border: none;
     text-align: left;
     cursor: pointer;
+    z-index: 10;
   }
 
 .delete-icon {
@@ -242,5 +249,21 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     margin-top: 5px;
 
 }
+
+.disable-bg {
+    width: 100px;
+    height: 100px;
+    position:relative;
+  }
+  
+  .disable-bg:after {
+    z-index:1;
+    content:'';
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
   
 
