Small visual fixes with lists

--- a/frontend/src/components/Medications/Medications.css
+++ b/frontend/src/components/Medications/Medications.css
@@ -1,6 +1,7 @@
 .background {
     width: 90%;
     max-width: 80rem;
+    min-height: 35rem;
     background-color: #99afbf;
     border-radius: 20px;
     margin:auto;
@@ -17,8 +18,8 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 }
 
 .title-icon {
-    font-size: 4rem;
-    padding: 20px 20px 0px;
+    font-size: 3.5rem;
+    padding: 25px 25px 0px;
 }
 
 .title-text {
@@ -67,7 +68,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 .medication-list-view {
     margin-left: 0.75rem; 
     margin-right: 0.75rem; 
-    max-height: 55vh;  
+    height: 55vh;  
     overflow: scroll;  
     display: flex;   
     flex-direction: column;
